src/scss/layout/_header.scss
.header {
  background: url('../assets/images/office.png') no-repeat top center;
  background-size: cover;
  height: 100vh;
  max-height: 695px;
  object-fit: cover;
  position: relative;

  &::before {
    background: $purple-transparent;
    bottom: 0;
    clear: both;
    content: '';
    display: block;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.navbar {
  font-size: 19px;
  margin: 0 0 88px;
  padding: 20px 0 0;
}

.message {
  color: $light-purple;
  font-size: 23px;
  line-height: 1.56;
  margin: 16px 0;
}

.inline-list {
  float: right;
  margin: 0;
  padding: 0;
}

.inline-list--item {
  display: inline-block;
  padding: 0 0 0 42px;
}

.brand-name {
  font-size: 22px;
}

.inline-list--item__link,
.brand-name {
  color: $white;

  &:hover {
    color: $white;
    text-decoration: none;
  }
}


@media (min-width: 1600px) {
  .header {
    max-height: 800px;
  }
}

//Tablet

@media (max-width: 991px) {
  .header {
    max-height: 600px;
  }

  .navbar {
    margin: 0 0 100px;
  }

  .message {
    font-size: 23px;
    line-height: 1.7;
    margin: 14px;
  }

}

@media (max-width: 900px) {
  .header {
    max-height: 512px;
  }

  .hellow {
    font-size: 60px;
  }

  .message {
    font-size: 20px;
  }
}

// Mobile
@media (max-width: 767px) {
  .header {
    background: url('../assets/images/office.png') no-repeat center center;
    color: $white;
    height: 78vh;
    min-height: 700px;
  }

  .navbar {
    background: $purple;
    margin: -15px;
    position: fixed;
    width: 100%;
    z-index: 1;
  }

  .brand-name {
    line-height: 2.5;
    padding: 0 20px;
  }

  .nav-icon {
    border-bottom: 2px solid $white;
    border-top: 2px solid $white;
    box-sizing: border-box;
    cursor: pointer;
    height: 22px;
    position: relative;
    transform-origin: center;
    transition: all .25s ease;
    width: 30px;

    &::after,
    &::before {
      background-color: $white;
      content: '';
      height: 2px;
      position: absolute;
      right: 0;
      top: 50%;
      transform: translateY(-50%);
      transform-origin: center;
      transition: all .25s ease;
      width: 30px;
    }

    &.active {
      border-color: transparent;
      transform: rotate(45deg);

      &::after {
        transform: translateY(-50%) rotate(-90deg);
        }
    }
}

  .navbar-toggle {
    margin: 15px;
    padding: 0;
  }

  .hello {
    font-size: 45px;
    margin: 130px 0 0;;
  }

  .message {
    font-size: 25px;
    margin: 30px 0;
}

  .inline-list {
    float: none;
  }

  .inline-list--item {
    background: $medium-purple;
    border-bottom: 1px solid $purple;
    display: block;
    margin: 0 -15px;
    padding: 15px;
  }

}

@media (max-width: 667px) {
  .header {
    background: url('../assets/images/office.png') no-repeat top left;
  }

  .inline-list--item__link {
    display: block;
  }
}

